fix: fix z-index for media screen 375

--- a/src/page-components/Home/Mask/styles.module.less
+++ b/src/page-components/Home/Mask/styles.module.less
@@ -19,6 +19,7 @@
     max-width: 600px;
     min-width: 330px;
     padding-right: 50px;
+    z-index: 1;
   }
 
   .notice-title{
